<resources>
    <!-- Общие строки -->
    <string name="app_name">DuoClone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_language">Choose your language</string>

    <string name="answer_button">Check Answer</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="quiz">Quiz</string>
    <string name="submit">Submit</string>
    <string name="back">Артқа</string>
    <string name="next_level">Келесі деңгей</string>
    <string name="login">Кіру</string>
    <string name="register">Тіркелу</string>
    <string name="sign_in_with_google">Google арқылы кіру</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_lessons"> Сабақтар</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_progress">Прогресс</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>

    <string name="lesson_icon">Иконка урока</string>
    <string name="completed_status">Статус завершения</string>
    <string name="default_web_client_id">468659197402-mfdg692s9hfngdlccthfgq93ri039vus.apps.googleusercontent.com</string>
    <string name="no_internet_message">Нет подключения к интернету</string>
    <string name="retry">Повторить попытку</string>

    <!-- Языки -->
    <string name="english_language">English</string>
    <string name="kazakh_language">Қазақ тілі</string>
    <string name="german_language">Deutsch</string>
    <string name="french_language">Français</string>
    <string name="spanish_language">Español</string>
    <string name="japanese_language">日本語</string>
    <string name="chinese_language">中文</string>

    <!-- Уроки -->
    <string name="lesson_progress">%1$d/%2$d tasks completed</string>
    <string name="start_lesson">Start Lesson</string>
    <string name="basic_phrases">Basic Phrases</string>
    <string name="greetings">Greetings</string>
    <string name="correct_answer_message">Correct! +%d XP</string>
    <string name="wrong_answer_message">Try again</string>
    <string name="restart">Restart</string>
    <string name="result_format">Result: %d/%d</string>
    <string name="next">Next →</string>
    <string name="grade_format">Grade: %d</string>
    <string name="grade_5">5 (Very Good)</string>
    <string name="grade_4">4 (Good)</string>
    <string name="grade_3">3 (Bad)</string>

</resources>