<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_lessons">

    <!-- Главный экран с уроками -->
    <fragment
        android:id="@+id/nav_lessons"
        android:name="com.example.duoclone.fragments.LessonsFragment"
        android:label="@string/menu_lessons"
        tools:layout="@layout/fragment_lessons">

        <action
            android:id="@+id/action_lessons_to_lesson"
            app:destination="@id/nav_lesson" />

        <action
            android:id="@+id/action_lessons_to_no_internet"
            app:destination="@id/nav_no_internet" />
    </fragment>

    <!-- Экран урока -->
    <fragment
        android:id="@+id/nav_lesson"
        android:name="com.example.duoclone.fragments.LessonFragment"
        android:label="Урок"
        tools:layout="@layout/fragment_lesson" />

    <!-- Ошибка сети -->
    <fragment
        android:id="@+id/nav_no_internet"
        android:name="com.example.duoclone.fragments.NoInternetFragment"
        android:label="Нет интернета"
        tools:layout="@layout/fragment_no_internet" />

    <!-- Профиль -->
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.duoclone.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Прогресс -->
    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.duoclone.fragments.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progress" />

</navigation>